# zit-mac

./: .gitignore  AGENTS.md  README.md  generate.py  pyproject.toml  run_z_image.sh
server/: README.md  main.py
server-capi/: README.md  __init__.py  config.py  main.py  process_manager.py  sd_server_client.py  start_server.py
server-capi/templates/: index.html
server/templates/: index.html
