[project]
name = "z-image-turbo-demo"
version = "0.1.0"
description = "Z-Image Turbo GGUF 文生图 Demo for Apple Silicon Mac"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "tqdm>=4.65.0",
]

[project.scripts]
generate = "generate:main"

[tool.uv]
python-downloads = "automatic"
